# Image-Processing

./: .gitignore  README.md  aula1.ipynb  aula10.ipynb  aula11.ipynb  aula12.ipynb  aula13.ipynb  aula14.ipynb  aula15.ipynb  aula16.ipynb  aula2.ipynb  aula3.ipynb  aula4.ipynb  aula5.ipynb  aula6.ipynb  aula7.ipynb  aula8.ipynb  aula9.ipynb  pyproject.toml  test.ipynb  test1.py  test2.py  test4.py  test5.py  test6.py
imgs/: readme.md
