[tool.poetry]
name = "processamento-de-imagem"
version = "0.1.0"
description = ""
authors = ["tomast1337 <vycasnicolas@gmail.com>"]
readme = "README.md"
packages = [{include = "processamento_de_imagem"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.0"
opencv-python = "^4.8.0.76"
ipykernel = "^6.25.2"
rich = "^13.5.3"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"